@@ -1,3 +1,7 @@
+drkns 12.01.2021 19:05:57 +0000 - build 5728
+
+1. Restore cursor state after launching programs.
+
 drkns 12.01.2021 01:05:24 +0000 - build 5727
 
 1. More 5726.
